BlackRidge.css
@media (min-width: 963px){

    main {  
        padding-left: 20%;
        padding-right: 20%;
        line-height: 40px;          
    }

    .hamburger, .cancel {
        display: none; 
    }

    #headerNav {
        display: flex; 
        justify-content: space-between;
        gap: 10px;
        align-items: center; 
        padding: 30px; 
        position: relative; 
    }

    header {
        border-bottom: solid  rgb(218, 170, 40); 
    }

    .secondLogo {
        display: none; 
    }

    .logo {
        position: absolute; 
        top: -30px;  
        left: -40px; 
        width: 200px; 
        height: 150px; 

    }
    
    #logoList {
        width: 80px;
    }


    .navLink {
        text-decoration: none;
        font-size: 20px; 
        color: black; 
        padding: 20px; 
        transition: border-bottom 0.3s ease; 
    }  
    
    .navLink:hover {
        border-bottom: solid rgb(218, 170, 40); 
        color: rgb(218, 170, 40);
    }



    ul {
        list-style-position: inside; 
    }

    h2 {
        font-size: 40px; 
    }

    iframe {
        min-width: 450px; 
        min-height: 415px; 
    }    

    .privacyPolicy, .TOS, .consumerDisclosure, .notAGovAgency, .notALawFirm {
        position: fixed; 
        top: 25%; 
        left: 25%; 
        margin: 0; 
        width:50%; 
        height: 50%; 
        border: solid black; 
        background-color: white; 
        z-index: 10000000000000000000000000; 
        box-sizing: border-box;
        padding: 20px 20px;     
        overflow: auto; 
        
    }
    .section {
        padding: 20px 20px; 
    }    

    footer {
        background-color: grey; 
        color: white; 
        padding:auto 15%; 
    }   

    .foot {
        display: flex; 
        flex-direction: column; 
        gap: 3px; 
        justify-content: space-around;
        align-items: center; 
        flex-wrap:wrap; 
        margin: auto 10%; 

    }    
  
}

@media (max-width: 962px) {
    .headerNav {
        display: flex; 
        flex-direction: column;
        justify-content: flex-start;
        gap: 5px; 
        position: fixed;
        padding-top: 20px; 
              
        transition: right 0.3s ease;
        margin-top: 0px; 
        right: -100%;   
        top: 0px;   
        width: 45%; 
        height: 100%; 
        background: beige; 
        z-index: 999;
        text-align: justify;    
        font-size: 20px; 
        
    }

    .headerNavClicked {
        display: flex; 
        flex-direction: column;
        justify-content: flex-start;
        gap: 10px; 
        position: fixed;
        padding-top: 20px; 
        transition: right 0.3s ease;
        margin-top: 0px; 
        right: 0px;   
        top: 0px;   
        width: 45%; 
        height: 100%; 
        background: beige;  
        z-index: 999;
        text-align: justify;
        font-size: 20px; 

    }

    header {
        padding: 20px 20px 20px 30px; 
        margin: 0 0 80px 0;  
        position: fixed; 
        top:0px; 
        background-color: white; 
        width: 100%; 
        height: 80px; 
        z-index: 999; 
        background-color: rgb(247, 246, 246); 
                
    }    


    .policyClicked {
        display: none; 
    }

    #logoList {
        display: none; 
    }

    .secondLogo{
        position: absolute; 
        top: -10px;  
        left: -40px;
      
        width: 200px; 
        height: 150px; 
    }


    .navLink {
        text-decoration: none;
        color: black; 
        padding: 2px; 

        
    }

    .navLink:hover {
        border-radius: 4px; 
        border: solid black thin; 
        background-color: rgb(218, 170, 40); 
    }

 
    main {
        padding: auto auto; 
        line-height: 2;
        margin-top: 75px; 

    }


    h2 {
        font-size: 35px
    }

    form {
        line-height: 2; 
    }



    iframe {
        min-width: 350px; 
        min-height: 315px; 
    }
    
    .visibleCancel {
        display: block; 
        position: fixed; 
        right: 8px;
        top: 5px;  
        z-index: 1000; 
        color: black; 
        font-size: 40px;
        cursor: pointer; 
    }    

    .privacyPolicy, .TOS, .consumerDisclosure, .notAGovAgency, .notALawFirm {
        position: fixed; 
        top: 25%; 
        left: 15%; 
        width:70%; 
        height: 50%; 
        border: solid black; 
        background-color: white; 
        z-index: 10000000000000000000000000; 
        box-sizing: border-box;
        padding: 20px 20px;     
        overflow: auto; 
    }

    .section {
        padding: 20px 20px; 
        scroll-margin-top: 85px;
    }

    footer {
        background-color: rgb(155, 153, 153); 
        color: white; 
        padding:auto 15%; 
        
    }

    .foot {
        display: flex; 
        flex-direction: column; 
        gap: 3px; 
        justify-content: space-around;
        align-items: center; 
        flex-wrap:wrap; 
        margin: auto 10%; 
        
    }

    span {
        font-size: 11px;
    }    
}

    .reblur, .blur {
        filter: blur(5px);         
    }

main, .policyParagraphs {
    font-family: 'Inter', sans-serif; 
}

body{
    margin: 0; 
    box-sizing: border-box;
    background-color: white;     
}

h2, h3 {
    font-family: 'Cormorant', serif;     
}



.navList {
    list-style-type: none;
}

.clickedHam {
    display: none; 
}

.cancel {
    display: none; 
}



.visibleCancel:hover {
    color: rgb(218, 170, 40); 
}

.hamburger {
    position: fixed; 
    top: 5px; 
    right: 8px; 
    z-index: 1000; 
    color: black; 
    cursor: pointer; 
    font-size: 25px; 

}

.hamburger:hover {
    color: rgb(218, 170, 40); 
}
 

form {
    border-radius: 7px; 
    display: flex; 
    flex-direction: column; 
    justify-content: space-around;
    gap:5px; 
    align-items:center;  
    padding: 10px 25%; 
    min-height: 500px;
    max-width: 500px; 
    margin-left: auto; 
    margin-right: auto; 
}

button {
    background-color: black; 
    color: white; 
    border-radius: 5px; 
    transition: transform 0.1s ease; 
    padding: 10px; 
    min-width: fit-content; 
}

button:hover {
    background-color:rgb(218, 170, 40); 
}

button:active {
    transform: scale(0.95); 
}



input, select {
    background-color:white; 
    box-shadow: none; 
    border: solid thin black; 
    border-radius: 3px; 
    min-width: 150px; 
    width: 300px; 
    height: 40px; 
}






.footlink:hover {
    border: solid white thin; 
    border-radius: 3px;
    cursor: pointer; 
}



ul {
    list-style-type: lower-roman;
}

p {
    font-size: 18px;
}

#firstHeader {
    position: relative; 
    left: 2px; 
}

details {
    cursor: pointer; 
}

h2 {
    color: black; 
    margin-bottom: 10px;     
}

hr {
    color: rgb(218, 170, 40)
}


.videoReviews {
    display: flex; 
    flex-direction: column; 
    align-items: center; 
    gap: 6px; 
}

.invisible {
    display: none; 
}



.close {
    position: fixed; 
    top:10%;
    right: 50%;
    font-size: 90px; 
    color: rgb(218, 170, 40);         
}

.close:hover {
    color: black; 
    cursor: pointer; 

}


.entry {
    display: flex; 
    flex-direction: column;
    gap: 5px; 
    flex-wrap: wrap;
}


.entry {
    margin-bottom: 15px;
    display: flex;
    flex-direction: column;
}


.error-msg {
    display: none;
    color: #d93025;
    font-size: 0.8rem;
    margin-top: 5px;
}


input:invalid:not(:placeholder-shown) + .error-msg,
select:invalid:not(:placeholder-shown) + .error-msg {
    display: block;
}


input:invalid:not(:placeholder-shown),
select:invalid:not(:placeholder-shown) {
    border: 2px solid #d93025;
}


input:valid:not(:placeholder-shown),
select:valid:not(:placeholder-shown) {
    border: 2px solid #1e8e3e;
}

.disclaimer {
    color: red;
    font-size: 0.9rem;
    max-width: 400px;
    min-width: 300px; 
}

#review {
    padding: 10px 20px;
    cursor: pointer;
}

option {
    color: black;
    background-color: white;  
}

option:hover {
    background-color:rgb(218, 170, 40)
}

